### Fix configuration file (HEAD -> main)
>Thu, 13 Oct 2022 22:06:53 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix configuration file (origin/main, origin/HEAD)
>Thu, 13 Oct 2022 20:18:40 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix packaging
>Thu, 13 Oct 2022 19:04:10 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add HTTPS support
>Thu, 13 Oct 2022 18:52:59 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add about_us.html template in the packaging
>Wed, 12 Oct 2022 05:40:28 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Change copyright Add About us page
>Wed, 12 Oct 2022 05:05:22 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Use the website with osgeo docker for GDAL
>Wed, 12 Oct 2022 03:24:12 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add Production envrionement. In production envrionment, use gdalsrsinfo. In dev, use the same command but through a call to a docker
>Wed, 12 Oct 2022 03:21:18 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Upadte the version of COTS
>Wed, 12 Oct 2022 03:06:25 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
