@@ -2,8 +2,8 @@
 host = 0.0.0.0
 port = 8080
 
-#[HTTPS]
-#host = 0.0.0.0
-#port = 5000
-#ssl_keyfile = ../../certificates/key.pem
-#ssl_certfile = ../../certificates/cert.pem
+[HTTPS]
+host = 0.0.0.0
+port = 5000
+ssl_keyfile = ../../certificates/key.pem
+ssl_certfile = ../../certificates/cert.pem
