@@ -1,4 +1,14 @@
-### Fix configuration file (HEAD -> main)
+### Fix Ctrl+C problem Improve code quality (HEAD -> main)
+>Sun, 16 Oct 2022 08:02:29 +0200
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix configuration file (tag: v0.9.2, origin/main, origin/HEAD)
 >Thu, 13 Oct 2022 22:06:53 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix configuration file (origin/main, origin/HEAD)
+### Fix configuration file
 >Thu, 13 Oct 2022 20:18:40 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
